<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailedFinishedProjectActivity">

    <include
        android:id="@+id/include7"
        layout="@layout/toolbar_detailed_finished_projects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_projectTitleFinished"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include7" />

    <TextView
        android:id="@+id/tv_printTimeDetail"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/time_to_print"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera" />

    <TextView
        android:id="@+id/tv_filamentNeededDetail"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/filament_needed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_printTimeDetail" />

    <TextView
        android:id="@+id/tv_filamendNameDetail"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/filament_used"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filamentNeededDetail" />

    <TextView
        android:id="@+id/tv_timeFinished"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_printTimeDetail"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera" />

    <TextView
        android:id="@+id/tv_amountFinished"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_filamentNeededDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_timeFinished" />

    <TextView
        android:id="@+id/tv_usedFinished"
        style="@style/DetailTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_filamendNameDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_amountFinished" />

    <Button
        android:id="@+id/btn_deleteProject"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="deleteProject"
        android:text="@string/delete_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_projectTitleFinished"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="89dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        android:textSize="20sp"
        app:icon="@drawable/baseline_add_a_photo_24"
        app:iconTint="#008DDA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include7" />

</androidx.constraintlayout.widget.ConstraintLayout>